- fixed carousel image display to fill out the div properly and resize on smaller screens. Updated CSS - Added custom image sizes - built function to grab posts for the homepage - built functions to grab post tags and categories - added some docblocks - lots of formatting changes to home page

--- a/wp-content/themes/harvsworld/assets/css/main.css
+++ b/wp-content/themes/harvsworld/assets/css/main.css
@@ -6285,9 +6285,27 @@ footer h6 {
   height: 500px;
   margin-bottom: 60px;
 }
+.carousel .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+.carousel-indicators {
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  background-color: #2f455b;
+  width: auto;
+  margin-left: 0;
+  margin-bottom: 0;
+}
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  background-color: rgba(0, 0, 0, 0.7);
+  left: 0;
+  right: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 /* Declare heights because of positioning of img element */
 .carousel .item {
@@ -6299,6 +6317,12 @@ footer h6 {
   left: 0;
   min-width: 100%;
   height: 500px;
+}
+@media screen and (max-width: 991px) {
+  .carousel-inner > .item > img {
+    min-height: 100%;
+    max-width: none;
+  }
 }
 /* Carousel colors */
 #homeCarousel {
