--- a/wp-content/themes/harvsworld/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/harvsworld/assets/less/layouts/pages/_home.less
@@ -6,9 +6,29 @@
   height: 500px;
   margin-bottom: 60px;
 }
+
+.carousel .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.carousel-indicators {
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  background-color: @brand-primary;
+  width: auto;
+  margin-left: 0;
+  margin-bottom: 0;
+}
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  background-color: rgba(0,0,0,0.7);
+  left: 0;
+  right: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 /* Declare heights because of positioning of img element */
@@ -21,6 +41,11 @@
   left: 0;
   min-width: 100%;
   height: 500px;
+  // Scale up controls for tablets and up
+  @media screen and (max-width: @screen-sm-max) {
+    min-height: 100%;
+    max-width: none;
+  }
 }
 
 /* Carousel colors */
